Fix collapsed elements

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -724,8 +724,23 @@ svc-question,
         display: flex;
       }
       .sd-element {
-        & > *:not(.sd-element__header) {
+        & > :where(:not(.sd-element__header)) {
           display: none;
+        }
+      }
+      .sd-question__container {
+        display: flex;
+        & > * {
+          display: none;
+        }
+        .sd-question__header-and-content-container {
+          display: flex;
+          & > * {
+            display: none;
+          }
+          .sd-question__header {
+            display: flex;
+          }
         }
       }
 
@@ -832,7 +847,8 @@ svc-question,
 
   .svc-hovered > .svc-question__content:not(.svc-question__content--dragged) {
     &::after {
-      box-shadow: var(--sjs2-border-effect-surface-hovered) inset,
+      box-shadow:
+        var(--sjs2-border-effect-surface-hovered) inset,
         0 0 0 var(--sjs2-border-width-x200, 2px) var(--sjs2-color-component-panel-default-bg, #ffffff) inset;
       outline: none;
     }
@@ -969,7 +985,7 @@ svc-question,
   }
 }
 
-.svc-question__content:not(.svc-question__content--composite-question) {
+.svc-question__content:where(:not(.svc-question__content--composite-question)) {
   .sd-element--complex > .sd-element__header--location-top,
   .sd-element--complex > div > div > .sd-element__header--location-top {
     padding: 0;
